# OperatingSystem

./: .gitignore  Cargo.toml  README.md  build.py  build.toml
kernel/: Cargo.toml  Makefile  linker.ld  uefi_linker.ld  x86_64-unknown-none.json
kernel/.cargo/: config
kernel/src/: apic.rs  context_switch.rs  initializer.rs  lib.rs  macros.rs  main.rs  paging.rs  serial.rs  tests.rs  utils.rs
kernel/src/async_process/: executor.rs  mod.rs  task.rs
kernel/src/bios/: mod.rs  serial.rs
kernel/src/bios/descriptor/: gdt.rs  mod.rs
kernel/src/bios/devices/: mod.rs
kernel/src/boot/: boot_start.asm  efi.cfg  grub.cfg  long_mode.asm  mutiboot.asm
kernel/src/descriptor/: gdt.rs  idt.rs  mod.rs
kernel/src/devices/: keyboard.rs  mod.rs  vga.rs
kernel/src/efi/: mod.rs
kernel/src/efi/descriptor/: gdt.rs  idt.rs  mod.rs
kernel/src/efis/descriptor/: gdt.rs  idt.rs  idt_not_call.rs  mod.rs
kernel/src/graphic/: frame.rs  mod.rs  writer.rs
kernel/src/interrupt/: exceptions.rs  ipi.rs  irq.rs  mod.rs  syscall.rs
kernel/src/memory/: allocator.rs  frame.rs  mod.rs  page_table.rs
kernel/src/process/: common.rs  memory.rs  mod.rs  process.rs  register.rs  registers.rs  scheduler.rs  task.rs  task_list.rs  types.rs
kernel/src/syscall/: mod.rs
kernel/system/: Cargo.toml
kernel/system/src/: console.rs  lib.rs  macros.rs  mutex.rs  tests.rs
kernel/system/src/bits/: flags.rs  mod.rs
kernel/system/src/buddy_system_allocator/: frame.rs  mod.rs
kernel/system/src/descriptor/: idt.rs
kernel/system/src/devices/: mod.rs  vga.rs
kernel/system/src/devices/bus/: mod.rs
kernel/system/src/devices/bus/pic/: class.rs  data.rs  dev.rs  header.rs  mod.rs
kernel/system/src/ia_32e/: addr.rs  call_convention.rs  controller.rs  mod.rs  serial.rs
kernel/system/src/ia_32e/apic/: lvt.rs  mod.rs
kernel/system/src/ia_32e/cpu/: apic.rs  control.rs  mod.rs  msr.rs  pic.rs  port.rs  timer.rs
kernel/system/src/ia_32e/descriptor/: descriptors.rs  gdt.rs  idt.rs  mod.rs  segment.rs
kernel/system/src/ia_32e/instructions/: apic.rs  interrupt.rs  mod.rs  page_table.rs  port.rs  register.rs  rflags.rs  segmention.rs  tables.rs
kernel/system/src/ia_32e/paging/: allocator.rs  frame.rs  frame_allocator.rs  mod.rs  page.rs  page_ops.rs  page_table.rs  result.rs
kernel/system/src/ia_32e/paging/mapper/: map_pt.rs  mod.rs  page.rs  pt_offset.rs
kernel/system/src/ia_32e/x2apic/: consts.rs  io_apic.rs  ioapic_register.rs  local_apic.rs  mod.rs  register.rs
kernel/system/src/ia_32e/xapic/: consts.rs  mod.rs  xpaic.rs
kernel/system/src/process/: task.rs
kernel/system/src/result/: mod.rs
kernel/system/src/result/error/: mem.rs  mod.rs
kernel/system/src/syscall/: call.rs  mod.rs  result.rs
linker_file/: multi.ld
src/: main.rs
src/kernel/: Cargo.toml  Makefile
src/kernel/.cargo/: config
src/kernel/src/: gdt.rs  idt.rs  lib.rs  main.rs  vga.rs
src/kernel/src/descriptor/: idt.rs
src/lib/: Cargo.toml
src/lib/src/: lib.rs  mutex.rs  tests.rs
src/lib/src/bits/: bit_ops.rs  flags.rs  mod.rs
src/lib/src/descriptor/: idt.rs
src/lib/src/devices/: vga.rs
src/lib/src/ia_32e/: addr.rs  mod.rs
src/lib/src/ia_32e/cpu/: mod.rs  pic.rs  port.rs
src/lib/src/ia_32e/descriptor/: descriptors.rs  gdt.rs  idt.rs  mod.rs  segment.rs  tss.rs
src/lib/src/ia_32e/instructions/: interrupt.rs  mod.rs  port.rs  register.rs  segmention.rs  tables.rs
src/lib/src/ia_32e/paging/: mod.rs  page.rs  page_ops.rs  page_table.rs
src/uefis/: Cargo.toml  OVMF_CODE.fd  build.py  buildv2.py
src/uefis/src/: main.rs  mem.rs
uefis/: Cargo.toml
uefis/.cargo/: config
uefis/osloader/: Cargo.toml
uefis/osloader/src/: lib.rs  loader.rs
uefis/osloader/src/elf/: elf32.rs  elf_type.rs  flags.rs  segment.rs  traits.rs
uefis/src/: fs.rs  loader.rs  main.rs  paging.rs  result.rs  serial.rs
uefis/src/elf/: elf32.rs  elf64.rs  elf_type.rs  flags.rs  mod.rs  segment.rs  traits.rs
