[package]
name = "kernel"
version = "0.1.0"
authors = ["venmosnake <VenmoSnake@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[dependencies]
multiboot2 = "0.8.2"
uart_16550 = "0.2.5"
pc-keyboard = "0.5.0"
volatile = "0.2.6"
spin = "0.5.2"
raw-cpuid = "7.0.3"
buddy_system_allocator="0.4.0"
bitflags = "1.2.1"

[dependencies.system]
path="system/"
version="0.3.0"
features=["call"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[lib]
name="rslib"
crate-type=["staticlib"]

[features]
default=["pic","mutiboot"]
xapic=[]
x2apic=[]
pic=[]
mutiboot=[]
uefi=[]