[package]
name = "uefis"
version = "0.1.0"
authors = ["venmosnake <VenmoSnake@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies.uefi]
version="0.4.0"
features = ['exts']

[dependencies.uefi-services]
version = "0.2.0"
features = ["qemu"]

[dependencies.log]
version = "0.4.8"

[dependencies.bitflags]
version = "1.0.4"

[dependencies.system]
path="../kernel/system"
version="0.3.0"

[features]
default=["efi"]
efi=[]
