[package]
name = "uefis"
version = "0.1.0"
authors = ["venmosnake <VenmoSnake@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies.uefi]
version="0.4.3"
features = ['exts']

[dependencies.uefi-services]
version = "0.2.0"
features = ["qemu"]

[dependencies.log]
version = "0.4.8"

[dependencies.bitflags]
version = "1.0.4"

[dependencies.system]
path="../kernel/system"
version="0.3.0"

[dependencies.raw-cpuid]
version = "7.0.3"

[dependencies.xmas-elf]
version = "0.6.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies]
# 互斥锁
spin = "0.5.2"
# 初始化UART，并通过串行端口发送数据
uart_16550 = "0.2.0"

[features]
default=["efi"]
efi=[]
