[package]
name = "system"
version = "0.3.0"
authors = ["venmosnake <VenmoSnake@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cast]
version = "0.2.2"
default-features = false

[dependencies.bitflags]
version = "1.0.4"

