[package]
name = "system"
version = "0.3.0"
authors = ["venmosnake <VenmoSnake@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cast]
version = "0.2.2"
default-features = false

[dependencies.raw-cpuid]
version = "7.0.3"

[dependencies.bitflags]
version = "1.2.1"


[features]
default=[]
call=[]