[package]
name = "system"
version = "0.3.0"
authors = ["venmosnake <VenmoSnake@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cast]
version = "0.2.2"
default-features = false

[dependencies.raw-cpuid]
version = "7.0.3"

[dependencies.bitflags]
version = "1.2.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.uefi]
version="0.4.4"

[dependencies.xmas-elf]
version = "0.6.2"

[dependencies]
paste = "0.1.5"
bit = "0.1.1"
multiboot2 = "0.8.2"

[dependencies.byteorder]
version = "1.3.4"
default-features = false

[features]
default=[]
call=[]