[package]
name = "kernel"
version = "0.1.0"
authors = ["amdins <admins@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["x86"]
apic = []
x86 = []

# 惰性初始化的宏
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# 每次测试完毕后需要自动关闭QEMU,
# 指定isa-debug-exi的io位图
# 使用串行端口
# 在测试过程中不显示界面

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"
]
test-timeout = 300          # (in seconds)
# 测试成功退出状态码
test-success-exit-code = 33         # (0x10 << 1) | 1

[dependencies]
# 用于系统引导
bootloader = "0.8.0"
# 避免编译器错误的优化
volatile = "0.2.6"
# 互斥锁
spin = "0.5.2"
x86_64 = "0.8.3"
# 初始化UART，并通过串行端口发送数据
uart_16550 = "0.2.0"
# 提供一个已检查的强制转换功能
#cast = "0.2.3"
# 可编程中断控制器 8259(Programmable Interrupt Controller)
#pic8259_simple = "0.1.1"
# 键盘键位映射
pc-keyboard = "0.3.1"
# cpuid
raw-cpuid="2.0.2"

system={path="../lib/",version="0.1.0"}

#[dependencies]
#smoltcp = "0.5" xmas-elf