[package]
name = "system"
version = "0.1.0"
authors = ["venmosnake <VenmoSnake@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.ux]
version = "0.1.3"
default-features = false

[dependencies.cast]
version = "0.2.2"
default-features = false